[tool.poetry]
name = "pengest"
version = "0.1.0"
description = ""
authors = ["kelvintaywl <kelvintaywl@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
